Bug 383951 - Assert in imap resource in retrieveitemtask
Summary: Assert in imap resource in retrieveitemtask
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-24 12:33 UTC by Allen Winter
Modified: 2017-09-04 19:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.2
Sentry Crash Report:


Attachments
backtrace (7.28 KB, text/plain)
2017-08-24 12:37 UTC, Allen Winter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2017-08-24 12:33:51 UTC
I'm hitting this assert pretty regularly recently.
Comment 1 Allen Winter 2017-08-24 12:37:13 UTC
Created attachment 107500 [details]
backtrace
Comment 2 Allen Winter 2017-09-04 15:14:41 UTC
this isn't happening anymore
Comment 3 Daniel Vrátil 2017-09-04 19:46:27 UTC
Git commit 149f88ea2f7beadaff24d03f59d02cedf0176f98 by Daniel Vrátil.
Committed on 04/09/2017 at 19:25.
Pushed by dvratil into branch 'Applications/17.08'.

IMAP: handle when RetrieveItemTask fails to find the message

Can happen if the Akonadi database contains invalid items or when the
Item is deleted before the task is dispatched.
FIXED-IN: 5.6.2

M  +5    -1    resources/imap/retrieveitemtask.cpp

https://commits.kde.org/kdepim-runtime/149f88ea2f7beadaff24d03f59d02cedf0176f98