IMAP: handle when RetrieveItemTask fails to find the message

Can happen if the Akonadi database contains invalid items or when the
Item is deleted before the task is dispatched.

BUG: 383951
FIXED-IN: 5.6.2